# mnaccounts

./: Dockerfile  compose.env  docker-compose.yaml
api/: gunicorn.py  policy.py  policyeval.py  pyproject.toml
api/mn/: do-it  explore-api-python  explore-db  explore-policy
api/mnaccounts/: _policyeval_builtins.py  account.py  app.py  client.py  config.py  db.py  development.config  logger.py  login.py  policy.py  policyeval.py  utils.py
api/mnaccounts/model/: __init__.py  dbaudit.py  flaskuser.py  policy.py  policymanage.py  target.py  ticket.py  user.py  user_target.py  user_target_policy.py  user_ticket.py  usermanage.py
api/mnaccounts/resource/: __init__.py  init.py  manage.py  simple.py  version.py
db/: vocabs.json
static/: package.json
static/public/: index.html  manifest.json
static/src/: api.js  constant.js  db.js  index.css  index.js  util.js
static/src/components/: Dashboard.jsx  DbAudit.jsx  Foot.jsx  Head.jsx  Login.jsx  Logout.jsx  Manage.jsx  Policy.jsx  SimpleResource.jsx  Target.jsx  User.jsx  UserTargetPolicy.jsx
